opam-version: "2.0"
name: "urps"
synopsis: "URPS: Uniform Random Peer Sampler"
description: """
URPS processes on the fly an unbounded and arbitrarily biased input stream
made of node identifiers exchanged within the system,
and outputs a stream that preserves Uniformity and Freshness properties.
"""
maintainer: "TG x Thoth <*@tg-x.net>"
authors: ["TG x Thoth <*@tg-x.net>"]
tags: [ "p2p" "protocol" "gossip" "uniform" "random" "peer sampling" "stream sampler" ]
license: "MPL-2.0"
homepage: "https://github.com/p2pcollab/ocaml-urps"
doc: "https://p2pcollab.github.io/doc/urps/"
dev-repo: "git+https://github.com/p2pcollab/ocaml-urps.git"
bug-reports: "https://github.com/p2pcollab/ocaml-urps/issues"
depends:
[
  "dune" {build & >= "1.0.0"}
  "sunnyhash"
  "ounit" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
